testsuite/tests/builtins/obj_methods/without_keys/non_iterable_keys/test.out
Error: Argument is missing required trait
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(obj.without_keys("Not a list"))
   │       ───────────────┬──────────────  
   │                      ╰──────────────── Trait "Iterable" is required for the parameter "keys", the type "Str" isn't implementing it
───╯
